--- a/core/templates/cardapio.html
+++ b/core/templates/cardapio.html
@@ -1,54 +1,40 @@
 {% extends 'pattern.html' %}
 {% block content %}
 <!-- ======= Menu Section ======= -->
-<section id="menu" class="menu">
+<br />
+<br />
+<br />
+<div>
+    <div class="section-header">
+        <p><span>Cardápio</span></p>
+    </div>
+</div>
+{% for c in categorias %}
+<section id="menu{{c.id}}" class="menu">
     <div class="container" data-aos="fade-up">
-
-        <div class="section-header">
-            <p><span>Cardápio</span></p>
-        </div>
-
         <div class="tab-content" data-aos="fade-up" data-aos-delay="300">
-
-            <div class="tab-pane fade active show" id="menu-starters">
-
+            <div class="tab-pane fade active show" id="menu-starters2">
                 <div class="tab-header text-center">
-                    <h3><span>FILÉ A </span>PARMEGIANA</h3>
+                    <h3><span></span>{{c.nome}}</h3>
                 </div>
 
                 <div class="row gy-5">
-
+                    {% for p in produtos %}
+                    {% if p.categoria_id == c.id %}
                     <div class="col-lg-4 menu-item">
-                        <h4>Parmegiana Filé Mignon (400g)</h4>
+                        <h4>{{p.nome}}</h4>
                         <p class="ingredients">
-                            Filé mingon, molho de tomate, mussarela, arroz branco
+                            {{p.descricao}}
                         </p>
                         <p class="price">
-                            R$ 120,00
+                            R$ {{p.preco}}
                         </p>
                     </div><!-- Menu Item -->
-
-                    <div class="col-lg-4 menu-item">
-                        <h4>Parmegiana Filé de Frango (400g)</h4>
-                        <p class="ingredients">
-                            Filé de frango, molho de tomate, mussarela, arroz branco
-                        </p>
-                        <p class="price">
-                            R$ 70,00
-                        </p>
-                    </div><!-- Menu Item -->
-
-                    <div class="col-lg-4 menu-item">
-                        <h4>Parmegiana Filé de Tilápia</h4>
-                        <p class="ingredients">
-                            Lorem, deren, trataro, filede, nerada
-                        </p>
-                        <p class="price">
-                            R$ 90,00
-                        </p>
-                    </div><!-- Menu Item -->
-
-                  <div class="container"><br /><div class="line"></div></div>
+                    {% endif %}
+                    {% endfor %}
+                    <div class="container"><br/>
+                        <div class="line"></div>
+                    </div>
 
                 </div>
             </div><!-- End Starter Menu Content -->
@@ -56,4 +42,5 @@
 
     </div>
 </section><!-- End Menu Section -->
+{% endfor %}
 {% endblock %}
