Criando o frontend do modulo de gestao

--- a/core/static/css/main.css
+++ b/core/static/css/main.css
@@ -309,6 +309,10 @@ section {
   background: rgba(206, 18, 18, 0.8);
 }
 
+.btn-editar {
+  background: var(--color-primary);
+}
+
 section {
   scroll-margin-top: 90px;
 }
