--- a/gestao/templates/gestao_home.html
+++ b/gestao/templates/gestao_home.html
@@ -1,12 +1,12 @@
 {% extends 'pattern.html' %}
 {% block content %}
-<!-- ======= Menu Section ======= -->
+<!-- Produtos -->
 <br />
 <br />
 <br />
 <div>
     <div class="section-header">
-        <p><span>Cardápio</span></p>
+        <p>Gestão do <span>Cardápio</span></p>
     </div>
 </div>
 {% for c in categorias %}
@@ -15,7 +15,7 @@
         <div class="tab-content" data-aos="fade-up" data-aos-delay="300">
             <div class="tab-pane fade active show" id="menu-starters2">
                 <div class="tab-header text-center">
-                    <h3><span></span>{{c.nome}}</h3>
+                    <h3>{{c.nome}}<span> <i class="bi bi-plus-square-fill"></i></span></h3>
                 </div>
 
                 <div class="row gy-5">
@@ -29,6 +29,7 @@
                         <p class="price">
                             R$ {{p.preco}}
                         </p>
+                        <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal"> Editar <i class="bi bi-pencil-square"></i></button>
                     </div><!-- Menu Item -->
                     {% endif %}
                     {% endfor %}
@@ -41,10 +42,32 @@
         </div>
 
     </div>
-</section><!-- End Menu Section -->
+</section>
 {% endfor %}
 
-{% include 'pattern-maps.html' %}
-<!-- End Google Maps -->
+<!-- Modals -->
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
