--- a/core/templates/pattern-navbar.html
+++ b/core/templates/pattern-navbar.html
@@ -1,8 +1,20 @@
+{% load user_agents %}
 <nav id="navbar" class="navbar">
     <ul>
+        {% if request|is_mobile %}
         {% for c in categorias %}
         <li><a href="#menu{{c.id}}">{{c.nome}}</a></li>
         {% endfor %}
+        {% else %}
+        <li class="dropdown">
+            <a href="#"><span>Cardapio</span><i class="bi dropdown-indicator bi-chevron-down"></i></a>
+            <ul>
+                {% for c in categorias %}
+                <li><a href="#menu{{c.id}}">{{c.nome}}</a></li>
+                {% endfor %}
+            </ul>
+        </li>
+        {% endif %}
         <li><a href="#contact">Onde estamos</a></li>
     </ul>
 </nav><!-- .navbar -->
